[metadata]
name = subcat
version = 1.5.0
description = Lightning-fast passive subdomain discovery tool for security professionals and bug bounty hunters.
long_description = file: README.md
long_description_content_type = text/markdown
author = duty1g
author_email = sec@dzauth.com
url = https://github.com/duty1g/subcat
license = MIT
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.6
install_requires =
    smart-requests-ai>=3.0.0
    PyYAML>=5.4.0
    ai-urllib4>=1.5.0
include_package_data = True

[options.package_data]
subcat =
    fingerprints.json
    modules/*.py

[options.entry_points]
console_scripts =
    subcat = subcat.subcat:main
