[metadata]
name = subcat
version = 1.6.0
description = Lightning-fast subdomain discovery tool for security professionals and bug bounty hunters.
long_description = file: README.md
long_description_content_type = text/markdown
author = duty1g
author_email = sec@dzauth.com
url = https://github.com/duty1g/subcat
license = MIT
classifiers =
    Programming Language :: Python :: 3
    Operating System :: OS Independent

[options]
packages = find_namespace:
python_requires = >=3.8
install_requires =
    requests>=2.31.0
    urllib3>=2.0.0
    PyYAML>=5.4.0
    aiohttp>=3.9.0
    rich>=13.0.0
    dnspython>=2.3.0
    playwright>=1.40.0
include_package_data = True

[options.packages.find]
include =
    subcat
    subcat.*
exclude =
    subcat.ui
    subcat.ui.*

[options.package_data]
subcat =
    fingerprints.json
subcat.assets =
    *.html
subcat.assets.icons =
    *

[options.entry_points]
console_scripts =
    subcat = subcat.subcat:main
